# mirage

./: .gitignore  CMakeLists.txt  readme  todo
res/glsl/: basic.comp  blob.glsl  blob_cast.comp  dbg_line.frag  dbg_line.vert  dbg_rect.vert  sdf.glsl  sdf_cast.comp  triangle.frag  triangle.vert  util.glsl  viewer.glsl  voxel_node.frag  voxel_node.vert
res/spv/: basic.comp.spv  blob_cast.comp.spv  dbg_line.vert.spv  dbg_rect.vert.spv  sdf_cast.comp.spv  triangle.vert.spv  voxel_node.frag.spv  voxel_node.vert.spv
src/: arena.hpp  bits.hpp  blob.cpp  blob.hpp  buffer.cpp  buffer.hpp  bump_alloc.cpp  bump_alloc.h  compute.cpp  compute.hpp  core_render.cpp  core_render.hpp  debug_overlay.cpp  debug_overlay.hpp  descriptor_helper.cpp  descriptor_helper.hpp  file.cpp  file.hpp  final_pass.cpp  heap_array.hpp  io.cpp  io.hpp  log.hpp  main.cpp  math_util.hpp  memory.hpp  pipeline.cpp  pipeline.hpp  render_context.cpp  render_context.hpp  render_graph.cpp  render_graph.hpp  render_pass.hpp  sdf.cpp  sdf.hpp  sdf_cpu.cpp  string.hpp  texture.cpp  texture.hpp  time.cpp  (+5 more)
